# rust-bwa

./: .gitmodules  Cargo.toml  README.md  build.rs  linux_prebuilt_bindings.rs  wrapper.h
bwa-sys/: Cargo.toml  build.rs
bwa-sys/src/: lib.rs
src/: lib.rs
test/: test_ref.fa.fai
tests/: skeptic.rs  test_ref.fa.amb  test_ref.fa.ann  test_ref.fa.pac  test_ref.fa.sa
