[package]
name = "bwa"
version = "0.1.0"
authors = ["Patrick Marks <patrick@10xgenomics.com>"]

[workspace]

[dependencies]
libc = "*"
failure = "*"
failure_derive = "*"
rust-htslib = { git="https://github.com/rust-bio/rust-htslib", rev="b32c9130a5fc22845d41e9ea6e971e53f6310b02", default-features = false, features = ["serde_feature"] }
bwa-sys = { path = "bwa-sys" }

[profile.release]
debug = 1
