[package]
name = "bwa"
version = "0.1.0"
authors = ["Patrick Marks <patrick@10xgenomics.com>"]

[workspace]

[dependencies]
libc = "*"
failure = "*"
failure_derive = "*"
rust-htslib = { version = ">=0.35.2", default-features = false, features = ["serde_feature"] }
bwa-sys = { path = "bwa-sys" }

[profile.release]
debug = 1
