[package]
name = "bwa"
version = "0.1.1"
authors = ["Patrick Marks <patrick@10xgenomics.com>"]
license = "MIT"

[workspace]

[dependencies]
libc = "*"
rust-htslib = { version = ">=0.35.2", default-features = false, features = ["serde_feature"] }
bwa-sys = { path = "bwa-sys" }
thiserror = "1"

[profile.release]
debug = 1
